- fixed issue with immutable sets - ConstraintVisitor now takes a Map of <Node, Label> as input to represent the Term* set instead of generating it. This solves an error with 02.fun