@@ -2,13 +2,15 @@ package types.constraint;
 
 import types.Node;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 public record NodeConstraint(Node p1, Node p2) implements Constraint {
 
     @Override
     public Set<Node> getNodes() {
-        return Set.of(p1, p2);
+        return new HashSet<>(Arrays.asList(p1, p2));
     }
 
     @Override
